[FEATURE]: implements the attachments endpoints and migration scripts
